--- a/index.html
+++ b/index.html
@@ -49,13 +49,22 @@
 </div>
 <div class="section-three">
   <h2>"The exploration of space is not only a journey of scientific discovery, but a journey of self-discovery. It challenges us to expand our minds, push beyond our limits, and embrace the infinite possibilities of the universe."</h2>
-  <p><h3>AI</h3></p>
+  <p><h3>„AI“</h3></p>
 </div>
 <div class="section-four">
-  <h3><strong>Explore your way now!</strong></h3>
-  <h4>Klick now and see the future</h4>
-  <button><strong>Explore</strong></button>
-
+  <section id="section-four">
+    <div class="frame">
+      <h3><strong>Explore your way now!</strong></h3>
+      <h4>Klick and see the future</h4>
+      <button class="blue-button">Learn More</button>
+    </div>
+  </section>
+  <footer>
+    <div class="footer-text">
+      <h3><strong>Just for Training © Winfried Weis 2023</strong></h3>
+    </div>
+  </footer>
+  
 </div>
     
 </body>
